--- a/KDJ/News_Summarization/Code/DataPrerocess/FinalPreprocess.ipynb
+++ b/KDJ/News_Summarization/Code/DataPrerocess/FinalPreprocess.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -454,8 +454,11 @@
      "output_type": "stream",
      "text": [
       "토큰 크기: 16355\n",
+      "\n",
       "토큰 예시: ['. ', ', ', '을_', '의_', '에_', '이_', '는_', '를_', '고_', '은_']\n",
+      "\n",
       "인코딩 테스트 - 전: 총 12개소 대상, 위험요소 사전 차단 김영신 기자 광양시는 광양소방서와 함께 시민들이 많이 이용하고 있는 다중이용시설 중 화재에 취약한 건축물을 대상으로 소방 특별점검을 실시했다. 이번 소방 특별점검은 화재가 발생해 인명피해가 발생한 제천 노블휘트니스 스파와 유사한 건물 3개소와 인명피해가 우려되는 다중이용시설 9개소 등 총 12개소를 대상으로 진행됐다. 소방공무원과 관련 전문가, 공무원으로 구성된 점검반은 지난 3일부터 화재 시 피난 할 수 있는 비상구 폐쇄 및 비상구나 피난통로에 장애물 설치 여부, 소방시설 정상작동 여부와 관리 상태 등 화재위험과 인명피해 우려되는 요소들을 집중적으로 점검했다. 조사결과 소방시설 불량과 건축물 임의 증축, 비상구 다른 용도 활용 등으로 적발된 곳에는 현지 시정명령 등의 조치를 취했으며, 소방서에서도 소방시설 불량사항에 대한 조치명령 발부와 취약대상 소방시설을 대상으로 소방훈련을 실시할 계획이다. 조춘규 안전총괄과장은 다중복합시설은 내부 구조가 복잡해 화재가 발생하면 연기로 인해 비상구를 찾기 매우 어렵다 며 건물 관리자는 피난통로의 장애물을 제거하고 소방시설 정상 작동을 확인하고, 이용자는 비상구를 미리 확인하는 등 모두가 관심을 가져야 인명피해를 막을 수 있다 고 당부했다. 한편, 소방당국은 제천 화재사고와 유사 건물 12개소 외에도 일반 숙박시설 등을 지속적으로 점검해 화재 발생에 강력히 대응해 나갈 방침이다.\n",
+      "\n",
       "인코딩 테스트 - 후: [106, 10078, 741, 1340, 2, 1512, 4613, 16131, 1853, 13297, 2459, 864, 198, 5862, 7, 2079, 7260, 20, 53, 2585, 769, 3419, 9, 27, 10568, 13433, 1027, 55, 2068, 5, 12989, 6324, 3, 149, 999, 16131, 516, 4538, 2903, 1, 48, 999, 16131, 516, 1339, 10, 12844, 9850, 6195, 2677, 1626, 11530, 192, 1267, 3746, 233, 6007, 16131, 7816, 20, 14662, 4189, 2532, 12376, 6195, 2677, 10334, 7, 10568, 13433, 1027, 6015, 741, 17, 106, 10078, 3538, 149, 1541, 1, 999, 2159, 13, 113, 2187, 2, 2159, 21, 1608, 1339, 217, 10, 33, 11526, 3351, 69, 261, 1132, 24, 19, 27, 1415, 252, 4279, 16131, 28, 1415, 161, 162, 261, 628, 466, 13103, 2593, 794, 1195, 6214, 2, 999, 418, 2513, 8614, 16131, 15706, 548, 15011, 17, 2068, 1512, 13, 6195, 1066, 10334, 7, 4613, 405, 10585, 15338, 26, 1, 9872, 16131, 999, 418, 10106, 13, 9270, 14067, 16131, 14505, 2, 1415, 252, 394, 6286, 16131, 2436, 397, 14914, 1960, 93, 1653, 2535, 6034, 16131, 153, 2162, 1104, 879, 2, 7260, 869, 999, 418, 10106, 10756, 40, 1522, 6034, 16131, 246, 11375, 4999, 626, 999, 1524, 149, 999, 5775, 5888, 150, 1, 94, 1953, 1472, 322, 4049, 6505, 10568, 1022, 10580, 3667, 1143, 12, 9083, 30, 12844, 16065, 16131, 1617, 18, 771, 1415, 5961, 7774, 1173, 4059, 16131, 42, 4189, 11088, 7, 261, 628, 466, 5674, 2593, 2220, 14485, 9, 999, 418, 8255, 8614, 3, 5575, 39, 2, 5545, 7, 1415, 5961, 5168, 15288, 17, 3080, 905, 3021, 234, 6195, 1302, 4764, 19, 830, 9, 1251, 1, 332, 2, 999, 11226, 11530, 2068, 1799, 20, 7514, 16131, 4189, 10078, 741, 3069, 1908, 3383, 418, 54, 757, 1339, 30, 3351, 1280, 5, 11706, 12858, 825, 787, 16145]\n"
      ]
     }
@@ -464,10 +467,66 @@
     "tokenizer = tfds.deprecated.text.SubwordTextEncoder.load_from_file('D:/TJ_FInal_Project/KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/tokenizer')\n",
     "\n",
     "print(f'토큰 크기: {tokenizer.vocab_size}')\n",
-    "print(f'토큰 예시: {tokenizer.subwords[:10]}')\n",
-    "print(f'인코딩 테스트 - 전: {sentences[19]}')\n",
+    "print(f'\\n토큰 예시: {tokenizer.subwords[:10]}')\n",
+    "print(f'\\n인코딩 테스트 - 전: {sentences[19]}')\n",
     "encodingList = tokenizer.encode(sentences[19])\n",
-    "print(f'인코딩 테스트 - 후: {encodingList}')"
+    "print(f'\\n인코딩 테스트 - 후: {encodingList}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. 구분 토큰 추가 및 패딩"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "beforeSentence = sentences[99]\n",
+    "beforeAbs = abs[99]\n",
+    "\n",
+    "START_TOKEN, END_TOKEN = [tokenizer.vocab_size], [tokenizer.vocab_size+1]\n",
+    "VOCAB_SIZE = tokenizer.vocab_size + 2\n",
+    "\n",
+    "SEN_MAX_LENGTH = 1199\n",
+    "ABS_MAX_LENGTH = 199\n",
+    "\n",
+    "def tokenized_and_padding(sentences, abses):\n",
+    "  tokenized_sentence, tokenized_abs = [], []\n",
+    "  \n",
+    "  for (sentence, abs) in zip(sentences, abses):\n",
+    "    sentence = START_TOKEN + tokenizer.encode(sentence) + END_TOKEN\n",
+    "    abs = START_TOKEN + tokenizer.encode(abs) + END_TOKEN\n",
+    "    \n",
+    "    tokenized_sentence.append(sentence)\n",
+    "    tokenized_abs.append(abs)\n",
+    "    \n",
+    "  tokenized_sentence = tf.keras.preprocessing.sequence.pad_sequences(\n",
+    "        tokenized_sentence, maxlen=SEN_MAX_LENGTH, padding='post'\n",
+    "    )\n",
+    "  tokenized_abs = tf.keras.preprocessing.sequence.pad_sequences(\n",
+    "      tokenized_abs, maxlen=ABS_MAX_LENGTH, padding='post'\n",
+    "  )\n",
+    "  \n",
+    "  return tokenized_sentence, tokenized_abs\n",
+    "\n",
+    "sentences, abs = tokenized_and_padding(sentences, abs)\n",
+    "\n",
+    "print(f'sentence 원본 : {beforeSentence}')\n",
+    "print(f'\\nsentence 토큰화 및 패딩 결과 : {sentences[99]}')\n",
+    "print(f'\\nabs 원본 : {beforeAbs}')\n",
+    "print(f'\\nabs 토큰화 및 패딩 결과 : {abs[99]}')\n",
+    "\n",
+    "end_time = time.time()\n",
+    "total_time = end_time - start_time\n",
+    "minutes, seconds = divmod(total_time, 60)\n",
+    "\n",
+    "print(f\"\\n총 소요 시간: {int(minutes)}분 {seconds:.2f}초\")"
    ]
   }
  ],
