--- a/KDJ/News_Summarization/Code/DataPrerocess/FinalPreprocess.ipynb
+++ b/KDJ/News_Summarization/Code/DataPrerocess/FinalPreprocess.ipynb
@@ -484,7 +484,39 @@
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentence 원본 : 3월부터 12월까지, 매주 토일 하루 2회 김영신 기자 광양 여수 순천 보성을 잇는 광역교통망이 최근 개통된데 이어 3월부터 12월까지 9개월간 광역순환시티투어버스가 운행된다. 지난 1월 22일부터 31일까지 업체로부터 공모신청을 받아 복수 지원된 광양과 순천 5개 업체를 대상으로 서류 및 제안설명 심사를 실시하고 각 시 군 추천에 의한 심사위원의 평가를 통해 선정했다. 광양은 초원관광, 대한고속, 대웅관광 등 3개 업체가 참여해 이중 가장 높은 점수를 받은 대웅관광이 광역시티투어버스 운영업체에 선정됐다. 광양에서 출발하는 광역순환 시티투어버스는 매주 토요일과 일요일, 하루 2차례 운행하며 오전에는 중마터미널 망덕포구 장도박물관 와인동굴을 순회하고 오후에는 중마터미널 여수 이순신광장 순천만 국가정원 보성 율포해변을 돌아서 오는 코스다. 순천 A관광 대표는 관광객 5명 이상이 예약 완료되면 운행을 해야 한다. 이용요금은 성인 1만원, 장애인과 군인, 경로 우대 5000원, 초중고생은 2500원이다.\n",
+      "\n",
+      "sentence 토큰화 및 패딩 결과 : [16355  7198  3376 ...     0     0     0]\n",
+      "\n",
+      "abs 원본 : 여수시가 광역시티 투어버스 제안 심사위원회 를 열고 시티투어버스를 운영할 각 시군 업체를 선정하여 3월부터 12월까지 9개월간 광역순환시티투어버스를 운행한다.\n",
+      "\n",
+      "abs 토큰화 및 패딩 결과 : [16355  7460    12  7464  2734  2876  1876  9474 13504 16131     8   814\n",
+      "  3140  2876  9799  3760   355 12076  6107  4521   124  7198 10921  6015\n",
+      " 11491  1984  2610  3140  2876  9799  2418    49 16145 16356     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0]\n",
+      "\n",
+      "총 소요 시간: 3분 21.80초\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time()\n",
     "beforeSentence = sentences[99]\n",
@@ -527,6 +559,38 @@
     "minutes, seconds = divmod(total_time, 60)\n",
     "\n",
     "print(f\"\\n총 소요 시간: {int(minutes)}분 {seconds:.2f}초\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. 결과 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "피클 저장 완료!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('D:/TJ_FInal_Project/KDJ/News_Summarization/Data/pickle/sentences.pkl', 'wb') as f:\n",
+    "    pickle.dump(sentences, f)\n",
+    "\n",
+    "with open('D:/TJ_FInal_Project/KDJ/News_Summarization/Data/pickle/abs.pkl', 'wb') as f:\n",
+    "    pickle.dump(abs, f)\n",
+    "\n",
+    "print('피클 저장 완료!')"
    ]
   }
  ],
