--- a/KDJ/News_Summarization/Code/FinalModel.ipynb
+++ b/KDJ/News_Summarization/Code/FinalModel.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 505,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,14 +185,19 @@
     "ABS_MAX_LENGTH = 149\n",
     "\n",
     "VOCAB_SIZE = tokenizer.vocab_size + 2\n",
-    "BATCH_SIZE = 256\n",
+    "BATCH_SIZE = 128\n",
     "BUFFER_SIZE = 20000\n",
     "\n",
-    "D_MODEL = 64\n",
-    "NUM_LAYERS = 1\n",
-    "NUM_HEADS = 1\n",
-    "DFF = 128\n",
+    "D_MODEL = 128\n",
+    "NUM_LAYERS = 1  # 2로 바꿔보기\n",
+    "NUM_HEADS = 2\n",
+    "DFF = 256\n",
     "DROPOUT = 0.3\n",
+    "\n",
+    "# D_MODEL = 256\n",
+    "# NUM_LAYERS = 2\n",
+    "# NUM_HEADS = 8\n",
+    "# DFF = 512\n",
     "\n",
     "EPOCHS = 2000\n",
     "\n",
@@ -218,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 508,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 509,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 510,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 513,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 514,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 516,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,15 +604,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 4081, 64)\n",
-      "(1, 4081, 64)\n"
+      "(1, 4081, 128)\n",
+      "(1, 4081, 128)\n"
      ]
     }
    ],
@@ -631,13 +636,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 519,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CustomSchedule(tf.keras.optimizers.schedules.LearningRateSchedule):\n",
     "\n",
-    "  def __init__(self, d_model, warmup_steps=100):\n",
+    "  def __init__(self, d_model, warmup_steps=1000):\n",
     "    super(CustomSchedule, self).__init__()\n",
     "    self.d_model = d_model\n",
     "    self.d_model = tf.cast(self.d_model, tf.float32)\n",
@@ -662,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 520,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 521,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 522,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 523,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 524,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 525,
    "metadata": {},
    "outputs": [
     {
@@ -827,57 +832,29 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2000\n",
-      "609/610 [============================>.] - ETA: 0s - loss: 2.2165 - acuuracy: 0.0623\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 2.2806 - acuuracy: 0.0641\n",
       "***************  첫번째 예측  ***************\n",
       "원문 : 동백꽃 개화 눈앞 시설물 보완, 환경 정비 김영신 기자 광양시가 옥룡면에 있는 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있다. 시는 산책로 데크와 안전난간 보수, 주차장 카스토퍼를 설치했으며, 안전사고 예방을 위해 시설물 보완과 주변 폐기물 철거 등 주변 환경 정비를 실시했다. 그동안 주변 토사 침식으로 인해 피해가 발생한 배수로를 정비하고자 지난 2일 문화재청 전문위원의 자문을 받아 자연하천의 원형을 보존했다. 옥룡사지 동백나무 숲 은 신라의 고승 도선국사가 옥룡사를 중수할 당시 풍수지리설에 따라 땅의 기운을 보강하기 위해 심었다는 전설이 있다. 백계산 나지막한 산자락 15만 에 1만여 동백나무가 숲을 이루고 해마다 봄기운이 가득한 3월말에 일제히 꽃망울이 올라오고 4월 초순경에는 절정을 이룬다. 김경수 문화재팀장은 붉은 동백과 함께 봄기운을 마음껏 느끼고, 추억을 담아갈 수 있도록 이번 정비를 철저히 진행하겠다 며 옥룡사 동백나무숲은 천년의 역사를 가진 소중한 자연유산인 만큼 후손에게 물려줄 수 있도록 보존 관리에도 최선을 다하겠다 고 말했다. 시는 옥룡사 동백나무 숲의 체계적인 보존관리를 위해 지난해 11월 기초조사 용역 최종보고회를 실시했다. 옥룡사 동백나무숲 일원에 예산 30억원을 투입해 2020년까지 매년 50ha씩 총 150ha에 국내 최대 동백 군락지 조성을 추진하고 있다.\n",
       "\n",
-      "요약 : 광화성시는 지난 20일 오후 2시부터 국립공원에서 열리포동 일대에서 열리포를 설치해 주민들에게 주민들에게 주민들에게 산을 위해 주민들에게 주민들에게 주민들에게 주민들에게 주민들에게 주민들에게 주민들에게 주민들에게 주민들에게 주민들에게 주민들에게 기할 수 있도록 노력하겠다고 밝혔다.\n",
+      "요약 : 동백꽃 생태생태생태생태시설물 생태시설물 생태시설물 정비 및 생태시설물 생태 생태시설물 생태시설물 정비 및 생태시설물 안전시설물 안전관리를 위한 생태시설물 생태시설물 정비 및 생태시설물 정비 및 생태 시설물 안전관리를 위한 생태시설물 안전관리를 위한 생태 생태 생태시설물 정비를 위한 공간으로 만들었다.\n",
       "\n",
       "정답 : 광양시가 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 주변 환경 정비를 실시했다.\n",
       "\n",
       "***************  두번째 예측  ***************\n",
       "원문 : 전남도 실국장 토론회 고용위기지역 후속대책 마련 강조 이성훈 전라남도지사 권한대행 이재영 행정부지사는 지난 14일 남북 정상의 판문점 선언 을 계기로 꽁꽁 얼어붙었던 남북 관계가 급속히 풀리고 있는 만큼, 도 차원의 실현 가능성 있는 남북교류협력사업 발굴에 매진해달라 고 당부했다. 이 권한대행은 도청 서재필실에서 열린 실국장 토론회를 통해 남북 평화체제 구축이 급물살을 타고 있으므로, 이제 지방 차원에서도 교류협력을 준비해야 할 때 라며 이같이 밝혔다. 이 권한대행은 정부 차원에서 경제협력 등 남북정상회담 후속 조치가 빠른 템포로 진행되는 것에 발맞춰 도에서도 전문가로 구성된 남북교류협력위원회를 구성, 도 차원의 교류협력사업 발굴에 나선 것은 시의적절하다 며 위원회에서 당장 실현 가능한 사업을 우선 정해 속도감 있게 추진해나가자 고 강조했다. 이어 영암군과 목포시의 고용위기지역 지정이 출발은 늦었지만 단독으로 어려웠던 목포시를 영암군과 묶어 공동으로 지정되도록 한 것은 전략 전술적으로 옳은 판단이었다 며 앞으로는 지정 성과를 최대화해 지역경제가 활성화되도록 정부의 관련 사업 공모에 적극적으로 유치하는 등 후속대책 추진에 온힘을 쏟아달라 고 독려했다. 이 권한대행은 이밖에 청년에게 농업 일자리를 주고 전남 농업의 미래지도를 바꿀 스마트팜 적극 육성 관광객 5000만명 시대를 맞아 그동안 유치 중심이었던 관광전략을 숙박과 주차, 관광시설 개선 등 수용 중심으로의 전환 등을 강조했다.\n",
       "\n",
-      "요약 : 전남도는 지난 20일 시청 회의실에서 개최된 남북교류 교류 간담회에서 개최되는 '남북교류 협력 방안'을 위한 토론회'를 개최하여 남북교류 협력하기로 결정했다.\n",
+      "요약 : 전남도지사가 남북 간담회를 갖고 남북 발전 방안 모색을 위해 남북 교류 토론회를 개최하여 남북교류 추진위원회가 남북 남북 교류 추진위원회를 개최하여 남북교류 추진위원회를 열어 남북교류 추진을 위한 논의를 통해 남북교류 추진할 계획이다.\n",
       "\n",
       "정답 : 지난 14일 전라남도지사 권한대행 이재영 행정부지사는 남북 관계가 개선되는 시점에서 이 흐름에 맞게 도 차원의 남북교류협력사업 추진이 필요하다고 역설했다.\n",
       "\n",
-      "손실 값 감소! 이전 손실: inf, 현재 손실: 2.216364622116089\n",
-      "610/610 [==============================] - 61s 97ms/step - loss: 2.2164 - acuuracy: 0.0623\n",
+      "손실 값 감소! 이전 손실: inf, 현재 손실: 2.2805891036987305\n",
+      "1219/1219 [==============================] - 108s 87ms/step - loss: 2.2806 - acuuracy: 0.0641\n",
       "Epoch 2/2000\n",
-      "609/610 [============================>.] - ETA: 0s - loss: 1.9804 - acuuracy: 0.0798\n",
-      "손실 값 감소! 이전 손실: 2.216364622116089, 현재 손실: 1.9804579019546509\n",
-      "610/610 [==============================] - 56s 92ms/step - loss: 1.9805 - acuuracy: 0.0798\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 1.7958 - acuuracy: 0.1027\n",
+      "손실 값 감소! 이전 손실: 2.2805891036987305, 현재 손실: 1.795789122581482\n",
+      "1219/1219 [==============================] - 101s 82ms/step - loss: 1.7958 - acuuracy: 0.1027\n",
       "Epoch 3/2000\n",
-      "609/610 [============================>.] - ETA: 0s - loss: 1.9319 - acuuracy: 0.0868\n",
-      "손실 값 감소! 이전 손실: 1.9804579019546509, 현재 손실: 1.9320019483566284\n",
-      "610/610 [==============================] - 56s 92ms/step - loss: 1.9320 - acuuracy: 0.0868\n",
-      "Epoch 4/2000\n",
-      "609/610 [============================>.] - ETA: 0s - loss: 1.9062 - acuuracy: 0.0904\n",
-      "손실 값 감소! 이전 손실: 1.9320019483566284, 현재 손실: 1.9061825275421143\n",
-      "610/610 [==============================] - 57s 93ms/step - loss: 1.9062 - acuuracy: 0.0904\n",
-      "Epoch 5/2000\n",
-      "609/610 [============================>.] - ETA: 0s - loss: 1.8915 - acuuracy: 0.0923\n",
-      "손실 값 감소! 이전 손실: 1.9061825275421143, 현재 손실: 1.8915187120437622\n",
-      "610/610 [==============================] - 57s 93ms/step - loss: 1.8915 - acuuracy: 0.0923\n",
-      "Epoch 6/2000\n",
-      "609/610 [============================>.] - ETA: 0s - loss: 1.8814 - acuuracy: 0.0936\n",
-      "손실 값 감소! 이전 손실: 1.8915187120437622, 현재 손실: 1.8814560174942017\n",
-      "610/610 [==============================] - 56s 92ms/step - loss: 1.8815 - acuuracy: 0.0936\n",
-      "Epoch 7/2000\n",
-      "609/610 [============================>.] - ETA: 0s - loss: 1.8745 - acuuracy: 0.0944\n",
-      "손실 값 감소! 이전 손실: 1.8814560174942017, 현재 손실: 1.8744761943817139\n",
-      "610/610 [==============================] - 56s 92ms/step - loss: 1.8745 - acuuracy: 0.0944\n",
-      "Epoch 8/2000\n",
-      "609/610 [============================>.] - ETA: 0s - loss: 1.8692 - acuuracy: 0.0951\n",
-      "손실 값 감소! 이전 손실: 1.8744761943817139, 현재 손실: 1.8691673278808594\n",
-      "610/610 [==============================] - 56s 92ms/step - loss: 1.8692 - acuuracy: 0.0951\n",
-      "Epoch 9/2000\n",
-      "609/610 [============================>.] - ETA: 0s - loss: 1.8647 - acuuracy: 0.0956\n",
-      "손실 값 감소! 이전 손실: 1.8691673278808594, 현재 손실: 1.864755392074585\n",
-      "610/610 [==============================] - 56s 92ms/step - loss: 1.8648 - acuuracy: 0.0956\n",
-      "Epoch 10/2000\n",
-      "229/610 [==========>...................] - ETA: 34s - loss: 1.8326 - acuuracy: 0.0926"
+      " 551/1219 [============>.................] - ETA: 54s - loss: 1.7144 - acuuracy: 0.1054"
      ]
     }
    ],
