--- a/KDJ/News_Summarization/Code/FinalModel.ipynb
+++ b/KDJ/News_Summarization/Code/FinalModel.ipynb
@@ -212,7 +212,10 @@
     "dataset = dataset.cache()\n",
     "dataset = dataset.shuffle(BUFFER_SIZE)\n",
     "dataset = dataset.batch(BATCH_SIZE)\n",
-    "dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n"
+    "dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
+    "\n",
+    "warmup_steps = 1000\n",
+    "previous_steps = 0\n"
    ]
   },
   {
@@ -650,20 +653,22 @@
    "source": [
     "class CustomSchedule(tf.keras.optimizers.schedules.LearningRateSchedule):\n",
     "\n",
-    "  def __init__(self, d_model, warmup_steps=1000):\n",
+    "  def __init__(self, d_model, warmup_steps=1000, previous_steps=0):\n",
     "    super(CustomSchedule, self).__init__()\n",
     "    self.d_model = d_model\n",
     "    self.d_model = tf.cast(self.d_model, tf.float32)\n",
     "    self.warmup_steps = warmup_steps\n",
+    "    self.previous_steps = previous_steps\n",
     "\n",
     "  def __call__(self, step):\n",
     "    step = tf.cast(step, tf.float32)\n",
-    "    arg1 = tf.math.rsqrt(step)\n",
-    "    arg2 = step * (self.warmup_steps**-1.5)\n",
+    "    adjusted_step = step + self.previous_steps\n",
+    "    arg1 = tf.math.rsqrt(adjusted_step)\n",
+    "    arg2 = adjusted_step * (self.warmup_steps**-1.5)\n",
     "\n",
     "    return tf.math.rsqrt(self.d_model) * tf.math.minimum(arg1, arg2)\n",
     "  \n",
-    "learning_rate = CustomSchedule(D_MODEL)\n"
+    "learning_rate = CustomSchedule(D_MODEL, warmup_steps, previous_steps)\n"
    ]
   },
   {
@@ -1356,7 +1361,73 @@
       "손실 값 감소! 이전 손실: 0.9961739778518677, 현재 손실: 0.9953048825263977\n",
       "1219/1219 [==============================] - 175s 143ms/step - loss: 0.9953 - acuuracy: 0.2299\n",
       "Epoch 95/2000\n",
-      "1025/1219 [========================>.....] - ETA: 27s - loss: 0.9918 - acuuracy: 0.2289"
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9947 - acuuracy: 0.2300\n",
+      "손실 값 감소! 이전 손실: 0.9953048825263977, 현재 손실: 0.9947357773780823\n",
+      "1219/1219 [==============================] - 175s 143ms/step - loss: 0.9947 - acuuracy: 0.2300\n",
+      "Epoch 96/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9941 - acuuracy: 0.2300\n",
+      "손실 값 감소! 이전 손실: 0.9947357773780823, 현재 손실: 0.9940618872642517\n",
+      "1219/1219 [==============================] - 181s 148ms/step - loss: 0.9941 - acuuracy: 0.2300\n",
+      "Epoch 97/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9933 - acuuracy: 0.2302\n",
+      "손실 값 감소! 이전 손실: 0.9940618872642517, 현재 손실: 0.9932790398597717\n",
+      "1219/1219 [==============================] - 178s 146ms/step - loss: 0.9933 - acuuracy: 0.2302\n",
+      "Epoch 98/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9926 - acuuracy: 0.2303\n",
+      "손실 값 감소! 이전 손실: 0.9932790398597717, 현재 손실: 0.9925527572631836\n",
+      "1219/1219 [==============================] - 177s 145ms/step - loss: 0.9926 - acuuracy: 0.2303\n",
+      "Epoch 99/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9917 - acuuracy: 0.2304\n",
+      "손실 값 감소! 이전 손실: 0.9925527572631836, 현재 손실: 0.9916588664054871\n",
+      "1219/1219 [==============================] - 177s 145ms/step - loss: 0.9917 - acuuracy: 0.2304\n",
+      "Epoch 100/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9902 - acuuracy: 0.2308\n",
+      "손실 값 감소! 이전 손실: 0.9916588664054871, 현재 손실: 0.9901695847511292\n",
+      "1219/1219 [==============================] - 177s 145ms/step - loss: 0.9902 - acuuracy: 0.2308\n",
+      "Epoch 101/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9888 - acuuracy: 0.2310\n",
+      "***************  첫번째 예측  ***************\n",
+      "원문 : 동백꽃 개화 눈앞 시설물 보완, 환경 정비 김영신 기자 광양시가 옥룡면에 있는 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있다. 시는 산책로 데크와 안전난간 보수, 주차장 카스토퍼를 설치했으며, 안전사고 예방을 위해 시설물 보완과 주변 폐기물 철거 등 주변 환경 정비를 실시했다. 그동안 주변 토사 침식으로 인해 피해가 발생한 배수로를 정비하고자 지난 2일 문화재청 전문위원의 자문을 받아 자연하천의 원형을 보존했다. 옥룡사지 동백나무 숲 은 신라의 고승 도선국사가 옥룡사를 중수할 당시 풍수지리설에 따라 땅의 기운을 보강하기 위해 심었다는 전설이 있다. 백계산 나지막한 산자락 15만 에 1만여 동백나무가 숲을 이루고 해마다 봄기운이 가득한 3월말에 일제히 꽃망울이 올라오고 4월 초순경에는 절정을 이룬다. 김경수 문화재팀장은 붉은 동백과 함께 봄기운을 마음껏 느끼고, 추억을 담아갈 수 있도록 이번 정비를 철저히 진행하겠다 며 옥룡사 동백나무숲은 천년의 역사를 가진 소중한 자연유산인 만큼 후손에게 물려줄 수 있도록 보존 관리에도 최선을 다하겠다 고 말했다. 시는 옥룡사 동백나무 숲의 체계적인 보존관리를 위해 지난해 11월 기초조사 용역 최종보고회를 실시했다. 옥룡사 동백나무숲 일원에 예산 30억원을 투입해 2020년까지 매년 50ha씩 총 150ha에 국내 최대 동백 군락지 조성을 추진하고 있다.\n",
+      "\n",
+      "요약 : 광양시가 옥룡면에 있는 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있다.\n",
+      "\n",
+      "정답 : 광양시가 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 주변 환경 정비를 실시했다.\n",
+      "\n",
+      "***************  두번째 예측  ***************\n",
+      "원문 : 전남도 실국장 토론회 고용위기지역 후속대책 마련 강조 이성훈 전라남도지사 권한대행 이재영 행정부지사는 지난 14일 남북 정상의 판문점 선언 을 계기로 꽁꽁 얼어붙었던 남북 관계가 급속히 풀리고 있는 만큼, 도 차원의 실현 가능성 있는 남북교류협력사업 발굴에 매진해달라 고 당부했다. 이 권한대행은 도청 서재필실에서 열린 실국장 토론회를 통해 남북 평화체제 구축이 급물살을 타고 있으므로, 이제 지방 차원에서도 교류협력을 준비해야 할 때 라며 이같이 밝혔다. 이 권한대행은 정부 차원에서 경제협력 등 남북정상회담 후속 조치가 빠른 템포로 진행되는 것에 발맞춰 도에서도 전문가로 구성된 남북교류협력위원회를 구성, 도 차원의 교류협력사업 발굴에 나선 것은 시의적절하다 며 위원회에서 당장 실현 가능한 사업을 우선 정해 속도감 있게 추진해나가자 고 강조했다. 이어 영암군과 목포시의 고용위기지역 지정이 출발은 늦었지만 단독으로 어려웠던 목포시를 영암군과 묶어 공동으로 지정되도록 한 것은 전략 전술적으로 옳은 판단이었다 며 앞으로는 지정 성과를 최대화해 지역경제가 활성화되도록 정부의 관련 사업 공모에 적극적으로 유치하는 등 후속대책 추진에 온힘을 쏟아달라 고 독려했다. 이 권한대행은 이밖에 청년에게 농업 일자리를 주고 전남 농업의 미래지도를 바꿀 스마트팜 적극 육성 관광객 5000만명 시대를 맞아 그동안 유치 중심이었던 관광전략을 숙박과 주차, 관광시설 개선 등 수용 중심으로의 전환 등을 강조했다.\n",
+      "\n",
+      "요약 : 전라남도지사 권한대행 이재영 행정부지사는 지난 14일 남북 정상의 판문점 선언 을 계기로 꽁꽁 얼어붙었던 남북 관계가 급속히 풀리고 있는 만큼, 도 차원의 실현 가능성 있는 남북교류협력사업 발굴에 매진해달라 고 당부했다.\n",
+      "\n",
+      "정답 : 지난 14일 전라남도지사 권한대행 이재영 행정부지사는 남북 관계가 개선되는 시점에서 이 흐름에 맞게 도 차원의 남북교류협력사업 추진이 필요하다고 역설했다.\n",
+      "\n",
+      "손실 값 감소! 이전 손실: 0.9901695847511292, 현재 손실: 0.9887682199478149\n",
+      "1219/1219 [==============================] - 183s 150ms/step - loss: 0.9888 - acuuracy: 0.2310\n",
+      "Epoch 102/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9873 - acuuracy: 0.2312\n",
+      "손실 값 감소! 이전 손실: 0.9887682199478149, 현재 손실: 0.9873251914978027\n",
+      "1219/1219 [==============================] - 177s 145ms/step - loss: 0.9873 - acuuracy: 0.2312\n",
+      "Epoch 103/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9861 - acuuracy: 0.2314\n",
+      "손실 값 감소! 이전 손실: 0.9873251914978027, 현재 손실: 0.9861165285110474\n",
+      "1219/1219 [==============================] - 177s 145ms/step - loss: 0.9861 - acuuracy: 0.2314\n",
+      "Epoch 104/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9853 - acuuracy: 0.2316\n",
+      "손실 값 감소! 이전 손실: 0.9861165285110474, 현재 손실: 0.9853357672691345\n",
+      "1219/1219 [==============================] - 177s 145ms/step - loss: 0.9853 - acuuracy: 0.2316\n",
+      "Epoch 105/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9843 - acuuracy: 0.2318\n",
+      "손실 값 감소! 이전 손실: 0.9853357672691345, 현재 손실: 0.9842776656150818\n",
+      "1219/1219 [==============================] - 176s 144ms/step - loss: 0.9843 - acuuracy: 0.2318\n",
+      "Epoch 106/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9836 - acuuracy: 0.2319\n",
+      "손실 값 감소! 이전 손실: 0.9842776656150818, 현재 손실: 0.9835833311080933\n",
+      "1219/1219 [==============================] - 175s 144ms/step - loss: 0.9836 - acuuracy: 0.2319\n",
+      "Epoch 107/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9830 - acuuracy: 0.2320\n",
+      "손실 값 감소! 이전 손실: 0.9835833311080933, 현재 손실: 0.9830037951469421\n",
+      "1219/1219 [==============================] - 175s 143ms/step - loss: 0.9830 - acuuracy: 0.2320\n",
+      "Epoch 108/2000\n",
+      " 256/1219 [=====>........................] - ETA: 2:17 - loss: 0.9404 - acuuracy: 0.2255"
      ]
     }
    ],
