--- a/KDJ/News_Summarization/Code/FinalModel_validation.ipynb
+++ b/KDJ/News_Summarization/Code/FinalModel_validation.ipynb
@@ -832,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. 학습 및 모델 저장"
+    "10. 모델 불러오기 및 검증"
    ]
   },
   {
@@ -1651,38 +1651,167 @@
       "손실 값 감소! 이전 손실: 0.9673196077346802, 현재 손실: 0.9669086337089539\n",
       "1219/1219 [==============================] - 172s 141ms/step - loss: 0.9669 - acuuracy: 0.2344\n",
       "Epoch 150/2000\n",
-      "1109/1219 [==========================>...] - ETA: 15s - loss: 0.9654 - acuuracy: 0.2339"
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9667 - acuuracy: 0.2345\n",
+      "손실 값 감소! 이전 손실: 0.9669086337089539, 현재 손실: 0.9666550159454346\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9667 - acuuracy: 0.2345\n",
+      "Epoch 151/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9664 - acuuracy: 0.2344\n",
+      "***************  첫번째 예측  ***************\n",
+      "원문 : 동백꽃 개화 눈앞 시설물 보완, 환경 정비 김영신 기자 광양시가 옥룡면에 있는 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있다. 시는 산책로 데크와 안전난간 보수, 주차장 카스토퍼를 설치했으며, 안전사고 예방을 위해 시설물 보완과 주변 폐기물 철거 등 주변 환경 정비를 실시했다. 그동안 주변 토사 침식으로 인해 피해가 발생한 배수로를 정비하고자 지난 2일 문화재청 전문위원의 자문을 받아 자연하천의 원형을 보존했다. 옥룡사지 동백나무 숲 은 신라의 고승 도선국사가 옥룡사를 중수할 당시 풍수지리설에 따라 땅의 기운을 보강하기 위해 심었다는 전설이 있다. 백계산 나지막한 산자락 15만 에 1만여 동백나무가 숲을 이루고 해마다 봄기운이 가득한 3월말에 일제히 꽃망울이 올라오고 4월 초순경에는 절정을 이룬다. 김경수 문화재팀장은 붉은 동백과 함께 봄기운을 마음껏 느끼고, 추억을 담아갈 수 있도록 이번 정비를 철저히 진행하겠다 며 옥룡사 동백나무숲은 천년의 역사를 가진 소중한 자연유산인 만큼 후손에게 물려줄 수 있도록 보존 관리에도 최선을 다하겠다 고 말했다. 시는 옥룡사 동백나무 숲의 체계적인 보존관리를 위해 지난해 11월 기초조사 용역 최종보고회를 실시했다. 옥룡사 동백나무숲 일원에 예산 30억원을 투입해 2020년까지 매년 50ha씩 총 150ha에 국내 최대 동백 군락지 조성을 추진하고 있다.\n",
+      "\n",
+      "요약 : 광양시는 옥룡사지 동백나무 숲의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있다.\n",
+      "\n",
+      "정답 : 광양시가 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 주변 환경 정비를 실시했다.\n",
+      "\n",
+      "***************  두번째 예측  ***************\n",
+      "원문 : 전남도 실국장 토론회 고용위기지역 후속대책 마련 강조 이성훈 전라남도지사 권한대행 이재영 행정부지사는 지난 14일 남북 정상의 판문점 선언 을 계기로 꽁꽁 얼어붙었던 남북 관계가 급속히 풀리고 있는 만큼, 도 차원의 실현 가능성 있는 남북교류협력사업 발굴에 매진해달라 고 당부했다. 이 권한대행은 도청 서재필실에서 열린 실국장 토론회를 통해 남북 평화체제 구축이 급물살을 타고 있으므로, 이제 지방 차원에서도 교류협력을 준비해야 할 때 라며 이같이 밝혔다. 이 권한대행은 정부 차원에서 경제협력 등 남북정상회담 후속 조치가 빠른 템포로 진행되는 것에 발맞춰 도에서도 전문가로 구성된 남북교류협력위원회를 구성, 도 차원의 교류협력사업 발굴에 나선 것은 시의적절하다 며 위원회에서 당장 실현 가능한 사업을 우선 정해 속도감 있게 추진해나가자 고 강조했다. 이어 영암군과 목포시의 고용위기지역 지정이 출발은 늦었지만 단독으로 어려웠던 목포시를 영암군과 묶어 공동으로 지정되도록 한 것은 전략 전술적으로 옳은 판단이었다 며 앞으로는 지정 성과를 최대화해 지역경제가 활성화되도록 정부의 관련 사업 공모에 적극적으로 유치하는 등 후속대책 추진에 온힘을 쏟아달라 고 독려했다. 이 권한대행은 이밖에 청년에게 농업 일자리를 주고 전남 농업의 미래지도를 바꿀 스마트팜 적극 육성 관광객 5000만명 시대를 맞아 그동안 유치 중심이었던 관광전략을 숙박과 주차, 관광시설 개선 등 수용 중심으로의 전환 등을 강조했다.\n",
+      "\n",
+      "요약 : 전라남도지사 권한대행 이재영 행정부지사는 지난 14일 남북 정상의 판문점 선언 을 계기로 꽁꽁 얼어붙었던 남북 관계가 급속히 풀리고 있는 만큼, 도 차원의 실현 가능성 있는 남북교류협력사업 발굴에 매진해달라 고 당부했다.\n",
+      "\n",
+      "정답 : 지난 14일 전라남도지사 권한대행 이재영 행정부지사는 남북 관계가 개선되는 시점에서 이 흐름에 맞게 도 차원의 남북교류협력사업 추진이 필요하다고 역설했다.\n",
+      "\n",
+      "손실 값 감소! 이전 손실: 0.9666550159454346, 현재 손실: 0.9663892984390259\n",
+      "1219/1219 [==============================] - 177s 146ms/step - loss: 0.9664 - acuuracy: 0.2344\n",
+      "Epoch 152/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9662 - acuuracy: 0.2345\n",
+      "손실 값 감소! 이전 손실: 0.9663892984390259, 현재 손실: 0.966211199760437\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9662 - acuuracy: 0.2345\n",
+      "Epoch 153/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9659 - acuuracy: 0.2345\n",
+      "손실 값 감소! 이전 손실: 0.966211199760437, 현재 손실: 0.9659224152565002\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9659 - acuuracy: 0.2345\n",
+      "Epoch 154/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9656 - acuuracy: 0.2345\n",
+      "손실 값 감소! 이전 손실: 0.9659224152565002, 현재 손실: 0.9656479954719543\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9656 - acuuracy: 0.2345\n",
+      "Epoch 155/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9656 - acuuracy: 0.2346\n",
+      "손실 값 감소! 이전 손실: 0.9656479954719543, 현재 손실: 0.9655969738960266\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9656 - acuuracy: 0.2346\n",
+      "Epoch 156/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9653 - acuuracy: 0.2346\n",
+      "손실 값 감소! 이전 손실: 0.9655969738960266, 현재 손실: 0.9653320908546448\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9653 - acuuracy: 0.2346\n",
+      "Epoch 157/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9650 - acuuracy: 0.2346\n",
+      "손실 값 감소! 이전 손실: 0.9653320908546448, 현재 손실: 0.9650144577026367\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9650 - acuuracy: 0.2346\n",
+      "Epoch 158/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9650 - acuuracy: 0.2346\n",
+      "손실 값 감소! 이전 손실: 0.9650144577026367, 현재 손실: 0.9649730920791626\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9650 - acuuracy: 0.2346\n",
+      "Epoch 159/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9647 - acuuracy: 0.2347\n",
+      "손실 값 감소! 이전 손실: 0.9649730920791626, 현재 손실: 0.9647177457809448\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9647 - acuuracy: 0.2347\n",
+      "Epoch 160/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9647 - acuuracy: 0.2347\n",
+      "손실 값 증가 또는 동일\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9647 - acuuracy: 0.2347\n",
+      "Epoch 161/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9640 - acuuracy: 0.2348\n",
+      "***************  첫번째 예측  ***************\n",
+      "원문 : 동백꽃 개화 눈앞 시설물 보완, 환경 정비 김영신 기자 광양시가 옥룡면에 있는 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있다. 시는 산책로 데크와 안전난간 보수, 주차장 카스토퍼를 설치했으며, 안전사고 예방을 위해 시설물 보완과 주변 폐기물 철거 등 주변 환경 정비를 실시했다. 그동안 주변 토사 침식으로 인해 피해가 발생한 배수로를 정비하고자 지난 2일 문화재청 전문위원의 자문을 받아 자연하천의 원형을 보존했다. 옥룡사지 동백나무 숲 은 신라의 고승 도선국사가 옥룡사를 중수할 당시 풍수지리설에 따라 땅의 기운을 보강하기 위해 심었다는 전설이 있다. 백계산 나지막한 산자락 15만 에 1만여 동백나무가 숲을 이루고 해마다 봄기운이 가득한 3월말에 일제히 꽃망울이 올라오고 4월 초순경에는 절정을 이룬다. 김경수 문화재팀장은 붉은 동백과 함께 봄기운을 마음껏 느끼고, 추억을 담아갈 수 있도록 이번 정비를 철저히 진행하겠다 며 옥룡사 동백나무숲은 천년의 역사를 가진 소중한 자연유산인 만큼 후손에게 물려줄 수 있도록 보존 관리에도 최선을 다하겠다 고 말했다. 시는 옥룡사 동백나무 숲의 체계적인 보존관리를 위해 지난해 11월 기초조사 용역 최종보고회를 실시했다. 옥룡사 동백나무숲 일원에 예산 30억원을 투입해 2020년까지 매년 50ha씩 총 150ha에 국내 최대 동백 군락지 조성을 추진하고 있다.\n",
+      "\n",
+      "요약 : 광양시는 옥룡사지 동백나무 숲의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있다.\n",
+      "\n",
+      "정답 : 광양시가 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 주변 환경 정비를 실시했다.\n",
+      "\n",
+      "***************  두번째 예측  ***************\n",
+      "원문 : 전남도 실국장 토론회 고용위기지역 후속대책 마련 강조 이성훈 전라남도지사 권한대행 이재영 행정부지사는 지난 14일 남북 정상의 판문점 선언 을 계기로 꽁꽁 얼어붙었던 남북 관계가 급속히 풀리고 있는 만큼, 도 차원의 실현 가능성 있는 남북교류협력사업 발굴에 매진해달라 고 당부했다. 이 권한대행은 도청 서재필실에서 열린 실국장 토론회를 통해 남북 평화체제 구축이 급물살을 타고 있으므로, 이제 지방 차원에서도 교류협력을 준비해야 할 때 라며 이같이 밝혔다. 이 권한대행은 정부 차원에서 경제협력 등 남북정상회담 후속 조치가 빠른 템포로 진행되는 것에 발맞춰 도에서도 전문가로 구성된 남북교류협력위원회를 구성, 도 차원의 교류협력사업 발굴에 나선 것은 시의적절하다 며 위원회에서 당장 실현 가능한 사업을 우선 정해 속도감 있게 추진해나가자 고 강조했다. 이어 영암군과 목포시의 고용위기지역 지정이 출발은 늦었지만 단독으로 어려웠던 목포시를 영암군과 묶어 공동으로 지정되도록 한 것은 전략 전술적으로 옳은 판단이었다 며 앞으로는 지정 성과를 최대화해 지역경제가 활성화되도록 정부의 관련 사업 공모에 적극적으로 유치하는 등 후속대책 추진에 온힘을 쏟아달라 고 독려했다. 이 권한대행은 이밖에 청년에게 농업 일자리를 주고 전남 농업의 미래지도를 바꿀 스마트팜 적극 육성 관광객 5000만명 시대를 맞아 그동안 유치 중심이었던 관광전략을 숙박과 주차, 관광시설 개선 등 수용 중심으로의 전환 등을 강조했다.\n",
+      "\n",
+      "요약 : 전라남도지사 권한대행 이재영 행정부지사는 지난 14일 남북 정상의 판문점 선언 을 계기로 꽁꽁꽁 얼어붙었던 남북 관계가 급속히 풀리고 있는 만큼, 도 차원의 실현 가능성 있는 남북교류협력사업 발굴에 매진해달라 고 당부했다.\n",
+      "\n",
+      "정답 : 지난 14일 전라남도지사 권한대행 이재영 행정부지사는 남북 관계가 개선되는 시점에서 이 흐름에 맞게 도 차원의 남북교류협력사업 추진이 필요하다고 역설했다.\n",
+      "\n",
+      "손실 값 감소! 이전 손실: 0.9647302627563477, 현재 손실: 0.964032769203186\n",
+      "1219/1219 [==============================] - 179s 147ms/step - loss: 0.9640 - acuuracy: 0.2348\n",
+      "Epoch 162/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9644 - acuuracy: 0.2348\n",
+      "손실 값 증가 또는 동일\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9644 - acuuracy: 0.2348\n",
+      "Epoch 163/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9640 - acuuracy: 0.2348\n",
+      "손실 값 감소! 이전 손실: 0.9643520712852478, 현재 손실: 0.9639536142349243\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9640 - acuuracy: 0.2348\n",
+      "Epoch 164/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9639 - acuuracy: 0.2348\n",
+      "손실 값 감소! 이전 손실: 0.9639536142349243, 현재 손실: 0.9639203548431396\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9639 - acuuracy: 0.2348\n",
+      "Epoch 165/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9634 - acuuracy: 0.2349\n",
+      "손실 값 감소! 이전 손실: 0.9639203548431396, 현재 손실: 0.9634224772453308\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9634 - acuuracy: 0.2349\n",
+      "Epoch 166/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9636 - acuuracy: 0.2348\n",
+      "손실 값 증가 또는 동일\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9636 - acuuracy: 0.2348\n",
+      "Epoch 167/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9631 - acuuracy: 0.2349\n",
+      "손실 값 감소! 이전 손실: 0.963626503944397, 현재 손실: 0.963132381439209\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9631 - acuuracy: 0.2349\n",
+      "Epoch 168/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9631 - acuuracy: 0.2350\n",
+      "손실 값 감소! 이전 손실: 0.963132381439209, 현재 손실: 0.9630884528160095\n",
+      "1219/1219 [==============================] - 173s 142ms/step - loss: 0.9631 - acuuracy: 0.2350\n",
+      "Epoch 169/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9627 - acuuracy: 0.2350\n",
+      "손실 값 감소! 이전 손실: 0.9630884528160095, 현재 손실: 0.9627305269241333\n",
+      "1219/1219 [==============================] - 175s 143ms/step - loss: 0.9627 - acuuracy: 0.2350\n",
+      "Epoch 170/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9626 - acuuracy: 0.2350\n",
+      "손실 값 감소! 이전 손실: 0.9627305269241333, 현재 손실: 0.9626309871673584\n",
+      "1219/1219 [==============================] - 177s 145ms/step - loss: 0.9626 - acuuracy: 0.2350\n",
+      "Epoch 171/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9624 - acuuracy: 0.2350\n",
+      "***************  첫번째 예측  ***************\n",
+      "원문 : 동백꽃 개화 눈앞 시설물 보완, 환경 정비 김영신 기자 광양시가 옥룡면에 있는 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있다. 시는 산책로 데크와 안전난간 보수, 주차장 카스토퍼를 설치했으며, 안전사고 예방을 위해 시설물 보완과 주변 폐기물 철거 등 주변 환경 정비를 실시했다. 그동안 주변 토사 침식으로 인해 피해가 발생한 배수로를 정비하고자 지난 2일 문화재청 전문위원의 자문을 받아 자연하천의 원형을 보존했다. 옥룡사지 동백나무 숲 은 신라의 고승 도선국사가 옥룡사를 중수할 당시 풍수지리설에 따라 땅의 기운을 보강하기 위해 심었다는 전설이 있다. 백계산 나지막한 산자락 15만 에 1만여 동백나무가 숲을 이루고 해마다 봄기운이 가득한 3월말에 일제히 꽃망울이 올라오고 4월 초순경에는 절정을 이룬다. 김경수 문화재팀장은 붉은 동백과 함께 봄기운을 마음껏 느끼고, 추억을 담아갈 수 있도록 이번 정비를 철저히 진행하겠다 며 옥룡사 동백나무숲은 천년의 역사를 가진 소중한 자연유산인 만큼 후손에게 물려줄 수 있도록 보존 관리에도 최선을 다하겠다 고 말했다. 시는 옥룡사 동백나무 숲의 체계적인 보존관리를 위해 지난해 11월 기초조사 용역 최종보고회를 실시했다. 옥룡사 동백나무숲 일원에 예산 30억원을 투입해 2020년까지 매년 50ha씩 총 150ha에 국내 최대 동백 군락지 조성을 추진하고 있다.\n",
+      "\n",
+      "요약 : 광양시는 옥룡사지 동백나무 숲의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있으며, 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 시설물 정비에 적극 나서고 있다.\n",
+      "\n",
+      "정답 : 광양시가 천연기념물 제489호인 옥룡사지 동백나무 숲 의 개화시기에 앞서 상춘객 맞이를 위한 주변 환경 정비를 실시했다.\n",
+      "\n",
+      "***************  두번째 예측  ***************\n",
+      "원문 : 전남도 실국장 토론회 고용위기지역 후속대책 마련 강조 이성훈 전라남도지사 권한대행 이재영 행정부지사는 지난 14일 남북 정상의 판문점 선언 을 계기로 꽁꽁 얼어붙었던 남북 관계가 급속히 풀리고 있는 만큼, 도 차원의 실현 가능성 있는 남북교류협력사업 발굴에 매진해달라 고 당부했다. 이 권한대행은 도청 서재필실에서 열린 실국장 토론회를 통해 남북 평화체제 구축이 급물살을 타고 있으므로, 이제 지방 차원에서도 교류협력을 준비해야 할 때 라며 이같이 밝혔다. 이 권한대행은 정부 차원에서 경제협력 등 남북정상회담 후속 조치가 빠른 템포로 진행되는 것에 발맞춰 도에서도 전문가로 구성된 남북교류협력위원회를 구성, 도 차원의 교류협력사업 발굴에 나선 것은 시의적절하다 며 위원회에서 당장 실현 가능한 사업을 우선 정해 속도감 있게 추진해나가자 고 강조했다. 이어 영암군과 목포시의 고용위기지역 지정이 출발은 늦었지만 단독으로 어려웠던 목포시를 영암군과 묶어 공동으로 지정되도록 한 것은 전략 전술적으로 옳은 판단이었다 며 앞으로는 지정 성과를 최대화해 지역경제가 활성화되도록 정부의 관련 사업 공모에 적극적으로 유치하는 등 후속대책 추진에 온힘을 쏟아달라 고 독려했다. 이 권한대행은 이밖에 청년에게 농업 일자리를 주고 전남 농업의 미래지도를 바꿀 스마트팜 적극 육성 관광객 5000만명 시대를 맞아 그동안 유치 중심이었던 관광전략을 숙박과 주차, 관광시설 개선 등 수용 중심으로의 전환 등을 강조했다.\n",
+      "\n",
+      "요약 : 전라남도지사 권한대행 이재영 행정부지사는 지난 14일 남북 정상의 판문점 선언 을 계기로 꽁꽁 얼어붙었던 남북 관계가 급속히 풀리고 있는 만큼, 도 차원의 실현 가능성 있는 남북교류협력사업 발굴에 매진해달라 고 당부했다.\n",
+      "\n",
+      "정답 : 지난 14일 전라남도지사 권한대행 이재영 행정부지사는 남북 관계가 개선되는 시점에서 이 흐름에 맞게 도 차원의 남북교류협력사업 추진이 필요하다고 역설했다.\n",
+      "\n",
+      "손실 값 감소! 이전 손실: 0.9626309871673584, 현재 손실: 0.9624234437942505\n",
+      "1219/1219 [==============================] - 182s 150ms/step - loss: 0.9624 - acuuracy: 0.2350\n",
+      "Epoch 172/2000\n",
+      "1219/1219 [==============================] - ETA: 0s - loss: 0.9624 - acuuracy: 0.2351\n",
+      "손실 값 감소! 이전 손실: 0.9624234437942505, 현재 손실: 0.962380588054657\n",
+      "1219/1219 [==============================] - 175s 143ms/step - loss: 0.9624 - acuuracy: 0.2351\n",
+      "Epoch 173/2000\n",
+      " 943/1219 [======================>.......] - ETA: 40s - loss: 0.9589 - acuuracy: 0.2334"
      ]
     }
    ],
    "source": [
-    "model.fit(dataset, epochs=EPOCHS, callbacks=[EpochValidation()])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "11. 전이학습"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.load_weights('D:/TJ_FInal_Project/KDJ/News_Summarization/Model/trasformer.h5')\n",
+    "import sys\n",
+    "import re\n",
     "\n",
-    "# ##      모든 레이어 동결\n",
-    "# for layer in model.layers:\n",
-    "#     layer.trainable = False\n",
+    "model.load_weights('D:/TJ_FInal_Project/KDJ/News_Summarization/Model/trasformer.h5')\n",
     "\n",
-    "# ##      마지막 층만 동결 해제\n",
-    "# for layer in model.layers[-1:]:\n",
-    "#     layer.trainable = True\n",
+    "def regex_column(columnList):\n",
+    "  if not isinstance(columnList, str):                                                   # Nan을 빈 문자열로 대체\n",
+    "      return ''\n",
+    "  columnList = re.sub(r'\\S+@\\S+\\.\\S+', '', columnList)                                  # 이메일 삭제\n",
+    "  columnList = columnList.replace('\\n', '')                                             # 개행 삭제\n",
+    "  columnList = re.sub(r'\\[.*?\\]|\\{.*?\\}|\\(.*?\\)', '', columnList)                       # 소,중,대괄호 내용 삭제\n",
+    "  columnList = re.sub(r'[^가-힣a-zA-Z0-9\\u4e00-\\u9fff\\s.,!?\\'\\\"~]', ' ', columnList)    # 이상한 특수문자 삭제\n",
+    "  columnList = re.sub(r'\\s+', ' ', columnList).strip()                                  # 양 끝 공백 삭제\n",
+    "  return columnList\n",
     "\n",
-    "# model.fit(dataset, epochs=EPOCHS, callbacks=[EpochValidation()])"
+    "print(\"뉴스 기사를 입력하세요. 입력을 마치려면 Ctrl+Z를 누르세요.\")\n",
+    "news_article = sys.stdin.read()\n",
+    "regex_articel = regex_column(news_article)\n",
+    "print(\"***************  뉴스 기사 본문  ***************\")\n",
+    "print(news_article)\n",
+    "print(\"\\n***************  요약  ***************\")\n",
+    "print(regex_articel)"
    ]
   }
  ],
