--- a/KDJ/News_Keyword_Theme_Recommend.py/code/Final_Theme_Recommend.ipynb
+++ b/KDJ/News_Keyword_Theme_Recommend.py/code/Final_Theme_Recommend.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\G-10\\anaconda3\\envs\\tensor\\lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:11: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "import numpy as np\n",
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\G-10\\anaconda3\\envs\\tensor\\lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -139,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +214,7 @@
     }
    ],
    "source": [
-    "directory_path = 'D:/TJ_FInal_Project/KDJ/News_Keyword_Theme_Recommend/embeddings'\n",
+    "directory_path = 'D:/TJ_FInal_Project/KDJ/News_Keyword_Theme_Recommend.py/embeddings'\n",
     "all_embeddings = []\n",
     "file_names = []\n",
     "\n",
@@ -228,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +283,7 @@
     "how_many_theme = 5\n",
     "top_indices = sorted(range(len(theme_score)), key=lambda i: theme_score[i], reverse=True)[:how_many_theme]\n",
     "\n",
-    "with open('D:/TJ_FInal_Project/KDJ/News_Keyword_Theme_Recommend/data/theme_dict.pkl', 'rb') as f:\n",
+    "with open('D:/TJ_FInal_Project/KDJ/News_Keyword_Theme_Recommend.py/data/theme_dict.pkl', 'rb') as f:\n",
     "    theme_dict = pickle.load(f)\n",
     "print(f'뉴스 키워드 5개 : {news_keywords}\\n')\n",
     "for i in range(0,how_many_theme):\n",
