--- a/KDJ/Financial_Chatbot/LSTM/Code/지식인+사전데이터.ipynb
+++ b/KDJ/Financial_Chatbot/LSTM/Code/지식인+사전데이터.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gina_df = pd.read_csv('C:/MachineLearning/cleaned_df_final.csv')\n",
+    "gina_df = pd.read_csv('D:/TJ_FInal_Project/KDJ/Financial_Chatbot/Sequence2Sequence/Data/FINAL_MERGE_DATA.csv')\n",
     "yunju_df = pd.read_csv('C:/MachineLearning/Dictionary_Validation.csv')\n"
    ]
   },
@@ -37,7 +37,7 @@
    ],
    "source": [
     "gina_question = gina_df['Question']\n",
-    "yunju_question = yunju_df['question']\n",
+    "yunju_question = yunju_df['Question']\n",
     "\n",
     "gina_tag = []\n",
     "yunju_tag = []\n",
@@ -74,7 +74,7 @@
     "    \"tag_list\" : tag_list\n",
     "})\n",
     "\n",
-    "new_df.to_csv('new_df.csv', index=False)"
+    "new_df.to_csv('D:/TJ_FInal_Project/KDJ/Financial_Chatbot/LSTM/Data/Token_merger.csv', index=False)"
    ]
   }
  ],
