--- a/KDJ/Financial_Chatbot/LSTM/Code/학습.ipynb
+++ b/KDJ/Financial_Chatbot/LSTM/Code/학습.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer.save_to_file('tokenizer')"
+    "tokenizer.save_to_file('D:/TJ_FInal_Project/KDJ/Financial_Chatbot/LSTM/Data/Final_tokenizer')"
    ]
   },
   {
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "tokenizer = tfds.deprecated.text.SubwordTextEncoder.load_from_file('C:/MachineLearning/Financial_chatbot/Model/tokenizer')\n",
+    "tokenizer = tfds.deprecated.text.SubwordTextEncoder.load_from_file('D:/TJ_FInal_Project/KDJ/Financial_Chatbot/LSTM/Data/Final_tokenizer')\n",
     "maxlength = 77\n",
     "\n",
     "train_list = []\n",
@@ -481,7 +481,7 @@
     "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
     "es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=4)\n",
-    "mc = ModelCheckpoint('C:/MachineLearning/Financial_chatbot/Model/best_model.h5', monitor='val_acc', mode='max', verbose=1, save_best_only=True)\n",
+    "mc = ModelCheckpoint('D:/TJ_FInal_Project/KDJ/Financial_Chatbot/Model/LSTM.h5', monitor='val_acc', mode='max', verbose=1, save_best_only=True)\n",
     "\n",
     "model.compile(optimizer='rmsprop', loss='binary_crossentropy', metrics=['acc'])\n",
     "history = model.fit(X_train, y_train, epochs=15, callbacks=[es, mc], batch_size=64, validation_split=0.2)\n"
@@ -589,7 +589,7 @@
     }
    ],
    "source": [
-    "loaded_model = load_model('C:/MachineLearning/Financial_chatbot/Model/best_model.h5')\n",
+    "loaded_model = load_model('D:/TJ_FInal_Project/KDJ/Financial_Chatbot/Model/LSTM.h5')\n",
     "print(\"\\n 테스트 정확도: %.4f\" % (loaded_model.evaluate(X_test, y_test)[1]))\n"
    ]
   },
@@ -645,23 +645,6 @@
     "\n",
     "print(final_question)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 343ms/step\n",
-      "100.00% 확률로 <DICT>\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
